# learn-rust

./: .gitignore
books/learn-rust-doing/: Cargo.toml  README.md
books/learn-rust-doing/ch1/: caesar_enc.rs  caesar_enc2.rs  check3.rs  coin.rs  fizzbuzz.py  kaimono.rs  moon.rs  prime100.py  prime100.rs  seireki_wareki.rs  show_price.rs
books/learn-rust-doing/ch2/: .gitignore  bingocard.py  bmi.py  bmi.rs  cmptext.py  cmptext.rs  counter.py  counter.rs  cur_files.rs  findfile.py  findfile.rs  fizzbuzz_file.rs  fizzbuzz_file2.rs  input_height.rs  jisyo.py  jisyo.rs  maze.py  mytree.rs  (+7 more)
books/rust-no-renshucho/: README.md
books/rustbook/: README.md
books/samplecli/: README.md
clap/derive-tutorial/: Cargo.toml  README.md
clap/derive-tutorial/chapter_0/: Cargo.toml
clap/derive-tutorial/chapter_0/src/: main.rs
clap/derive-tutorial/chapter_1/: Cargo.toml
clap/derive-tutorial/chapter_1/src/: main.rs
clap/derive-tutorial/chapter_1_2/: Cargo.toml
clap/derive-tutorial/chapter_1_3/: Cargo.toml
clap/derive-tutorial/examples/: chapter_2_1_positional.rs  chapter_2_1_positional_mult.rs  chapter_2_2_options_derive.rs  chapter_2_2_options_mult.rs  chapter_2_3_flag_count.rs  chapter_2_3_flag_derive.rs  chapter_2_4_subcommands_derive.rs  chapter_2_5_default_derive.rs  chapter_3_2_parse_derive.rs  chapter_3_2_validate_derive.rs  chapter_3_3_relations_derive.rs  chapter_3_4_custom_derive.rs
microsoft-training/rust-journal/: Cargo.toml  README.md
rust-cli/: README.md
rust-cli/grrs/: Cargo.toml
rust-cli/grrs/src/: lib.rs  main.rs
rust-cli/grrs/tests/: cli.rs
(+53 files in other folders)
